# python-project-lvl1

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
a_yanovskiy_brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/: .cli.py.swp  cli.py  game.py  game_adds.py  game_engine.py  parity_check.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
