[tool.poetry]
name = "a-yanovskiy_brain_games"
version = "1.1.0"
description = "Brain games"
authors = ["artem yanovskiy <a.e.yanovskiy@gmail.com>"]
repository = "https://github.com/a-yanovskiy/python-project-lvl1.git"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Other Audience",
	"License :: Freeware",
	"Natural Language :: English",
	"Programming Language :: Python :: 3.8",
	"Topic :: Games/Entertainment"
]
packages = [
	{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
